[tool.poetry]
name = "coding-jejus-trading-engine"
version = "0.1.0"
description = ""
authors = ["UponTheSky <sailing.to.orbis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.22.0"
sortedcontainers = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
